1998-12-18  John R. Jackson  <jrj@purdue.edu>

	* server-src/amstatus.pl.in: add statistics about how much time
	taper and each dumper is busy, how much time N dumpers are busy
	and why no dumpers were busy.

1998-12-18  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (struct databuf): add 'filename', 'filename_seq',
	and 'split_size' members to replace the equivalent globals.  Nuke
	those globals.
	* server-src/dumper.c (databuf_init): add 'filename' and 'split_size'
	args to init those members.  Init filename_seq to 0.
	* server-src/dumper.c (main): declare and init the databuf here
	* server-src/dumper.c (databuf_flush): refer to split_size, filename,
	and filename_seq in the databuf instead of the globals.
	* server-src/dumper.c (do_dump): now takes a databuf instead of an
	output file descriptor.

1998-12-18  John R. Jackson  <jrj@purdue.edu>

	* server-src/amstatus.pl.in: fix two perl warnings.

1998-12-18  John R. Jackson  <jrj@purdue.edu>

	* server-src/amstatus.pl.in: fix two minor typos.  Add percentage
	display to the summary comparing real and estimated size and real
	versus total estimate (showing how well the estimates are doing and
	a rough guess at how far along the run is).  Also the percentage of
	total holding disk space in use.

1998-12-18  John R. Jackson  <jrj@purdue.edu>

	* server-src/amstatus.pl.in: take the --file argument as is if it
	is an absolute path.

1998-12-18  John R. Jackson  <jrj@purdue.edu>

	* server-src/driver.c: call short_dump_state() one last time before
	quitting so amstatus gets a last good status.  Tell taper to quit
	after the dumpers since it writes more information to the amdump
	file (helps prevent mixed messages).

1998-12-17  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (databuf_flush): return 0 on success

1998-12-17  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (databuf_flush): new function.  Writes
	the contents of the databuf out to its backing file, doing splitting