@@ -21,13 +21,19 @@ if ( $USE_VERSION_SUFFIXES =~ /^yes$/i ) {
         $suf='-@VERSION@';
 }
 
-$result = &NGetOpt (	"summary","dumping|d",
-							"waitdumping|wdumping","waittaper|wtaper",
-							"dumpingtape|dtape", "writingtape|wtape",
-							"finished","failed|error",
-							"estimate","gestimate|gettingestimate",
-							"config|c:s","file:s",
-							);
+$result = &NGetOpt (	"summary",
+			"dumping|d",
+			"waitdumping|wdumping",
+			"waittaper|wtaper",
+			"dumpingtape|dtape",
+			"writingtape|wtape",
+			"finished",
+			"failed|error",
+			"estimate",
+			"gestimate|gettingestimate",
+			"config|c:s",
+			"file:s",
+			);
 if($result !=1 ) {
 	usage();
 }
@@ -180,7 +186,7 @@ while(<AMDUMP>) {
 		$start_time=$1;
 		$current_time=$1;
 		$dumpers_active[0]=0;
-		$dumpers_time=$current_time;
+		$dumpers_held[0]={};
 		$dumpers_active=0;
 	}
 	elsif(/^driver: adding holding disk \d+ dir \S+ size (\d+)/) {
@@ -206,17 +212,13 @@ while(<AMDUMP>) {
 		if(! defined($busy_time{$2})) {
 			$busy_time{$2}=0;
 		}
-		$dumpers_active[$dumpers_active]+=$current_time-$dumpers_time;
 		$dumpers_active++;
 		if(! defined($dumpers_active[$dumpers_active])) {
 			$dumpers_active[$dumpers_active]=0;
 		}
-		$dumpers_time=$current_time;
-		if(defined($dumpers_idle_time)) {
-			$dumpers_idle{$status_driver}
-				+=$current_time-$dumpers_idle_time;
+		if(! defined($dumpers_held[$dumpers_active])) {
+			$dumpers_held[$dumpers_active]={};
 		}
-		undef($dumpers_idle_time);
 	}
 	elsif(/driver: result time (\S+) from (dumper\d+): FAILED (\d+-\d+) (.*)/) {
 		$current_time=$1;
@@ -227,10 +229,7 @@ while(<AMDUMP>) {
 		$busy_time{$2}+=($1-$dump_time{$hostpart});
 		$dump_time{$hostpart}=$1;
 		$error{$hostpart}=$error;
-		$dumpers_active[$dumpers_active]+=$current_time-$dumpers_time;
 		$dumpers_active--;
-		$dumpers_time=$current_time;
-		$dumpers_idle_time=$current_time if ($dumpers_active == 0);
 	}
 	elsif(/driver: result time (\S+) from (dumper\d+): TRY-AGAIN (\d+-\d+) (.*)/) {
 		$current_time=$1;
@@ -241,10 +240,7 @@ while(<AMDUMP>) {
 		$busy_time{$2}+=($1-$dump_time{$hostpart});
 		$dump_time{$hostpart}=$1;
 		$error{$hostpart}=$error;
-		$dumpers_active[$dumpers_active]+=$current_time-$dumpers_time;
 		$dumpers_active--;
-		$dumpers_time=$current_time;
-		$dumpers_idle_time=$current_time if ($dumpers_active == 0);
 	}
 	elsif(/driver: result time (\S+) from (dumper\d+): DONE (\d+-\d+) (\d+) (\d+) (\d+) \[.*\]/) {
 		$current_time=$1;
@@ -256,10 +252,7 @@ while(<AMDUMP>) {
 		$dump_finished{$hostpart}=1;
 		$busy_time{$2}+=($1-$dump_time{$hostpart});
 		$dump_time{$hostpart}=$1;
-		$dumpers_active[$dumpers_active]+=$current_time-$dumpers_time;
 		$dumpers_active--;
-		$dumpers_time=$current_time;
-		$dumpers_idle_time=$current_time if ($dumpers_active == 0);
 	}
 	elsif(/driver: finished-cmd time (\S+) dumper\d+ dumped (\S+):(\S+)/){
 		$current_time=$1;
@@ -326,14 +319,17 @@ while(<AMDUMP>) {
 		$runq=$7;
 		$stoppedq=$8;
 		$wakeup=$9;
+		if($status_driver ne "") {
+			$dumpers_active[$dumpers_active_prev]
+				+=$current_time-$state_time_prev;
+			$dumpers_held[$dumpers_active_prev]{$status_driver}
+				+=$current_time-$state_time_prev;
+		}
+		$state_time_prev=$current_time;
+		$dumpers_active_prev=$dumpers_active;
 		$status_driver=$10;
-		if($dumpers_active == 0) {
-			if(! defined($dumpers_idle{$status_driver})) {
-				$dumpers_idle{$status_driver}=0;
-			}
-			$dumpers_idle{$status_driver}
-				+=$current_time-$dumpers_idle_time;
-			$dumpers_idle_time=$current_time;
+		if(! defined($dumpers_held[$dumpers_active]{$status_driver})) {
+			$dumpers_held[$dumpers_active]{$status_driver}=0;
 		}
 	}
 }
@@ -621,22 +617,27 @@ if (defined $opt_summary) {
 				($dumpers_active[$d] * 1.0 / $total_time) * 100;
 			print $l;
 			$s1 = "";
-			if($d == 0) {
-				$s2 = " " x length($l);
-				foreach $key (sort keys %dumpers_idle) {
-					printf "%s%20s: %8s  (%6.2f%%)\n",
-						$s1,
-						$key,
-						&busytime($dumpers_idle{$key}),
-						($dumpers_idle{$key} * 1.0 / $dumpers_active[$d]) * 100;
-					$s1 = $s2;
-				}
+			$s2 = " " x length($l);
+			$r = $dumpers_held[$d];
+			foreach $key (sort valuesort keys %$r) {
+				next
+				  unless $dumpers_held[$d]{$key} >= 1;
+				printf "%s%20s: %8s  (%6.2f%%)\n",
+					$s1,
+					$key,
+					&busytime($dumpers_held[$d]{$key}),
+					($dumpers_held[$d]{$key} * 1.0 / $dumpers_active[$d]) * 100;
+				$s1 = $s2;
 			}
 			if ($s1 eq "") {
 				print "\n";
 			}
 		}
 	}
+}
+
+sub valuesort() {
+	$r->{$b} <=> $r->{$a};
 }
 
 sub dump_size() {
