@@ -1,3 +1,8 @@
+1998-12-19  John R. Jackson  <jrj@purdue.edu>
+
+	* server-src/amstatus.pl.in: instead of just displaying why no
+	dumpers were busy, display reason(s) why N+1 were not busy.
+
 1998-12-18  John R. Jackson  <jrj@purdue.edu>
 
 	* server-src/amstatus.pl.in: add statistics about how much time
